--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: movi
-    volumes:
-      - ./data/postgresql:/var/lib/postgresql
-      - ./data/postgresql/data:/var/lib/postgresql/data
+    # volumes:
+    #   - ./data/postgresql:/var/lib/postgresql
+    #   - ./data/postgresql/data:/var/lib/postgresql/data
   # pgadmin:
   #   container_name: pgadmin4_container
   #   image: dpage/pgadmin4
